# near-aurora-deposit-withdraw

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.sh  call_deposit_withdraw.sh  deploy.sh
aurora-deposit-withdraw/: foundry.toml  remappings.txt
aurora-deposit-withdraw/src/: Contract.sol  DepositWithdrawContract.sol
near_deposit_withdraw/: Cargo.toml
near_deposit_withdraw/src/: contract_account_id.rs  error.rs  lib.rs  types.rs
near_deposit_withdraw/tests/: test_utils.rs
res/: near_deposit_withdraw.wasm
